WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
173274
[iOS WK2] Peeking on an image could result in a preview at the wrong size
https://bugs.webkit.org/show_bug.cgi?id=173274
Summary
[iOS WK2] Peeking on an image could result in a preview at the wrong size
Simon Fraser (smfr)
Reported
2017-06-12 14:28:09 PDT
[iOS WK2] Peeking on an image could result in a preview at the wrong size
Attachments
Patch
(9.27 KB, patch)
2017-06-12 14:34 PDT
,
Simon Fraser (smfr)
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2017-06-12 14:34:24 PDT
Created
attachment 312698
[details]
Patch
Simon Fraser (smfr)
Comment 2
2017-06-12 14:34:45 PDT
rdar://problem/30404627
Tim Horton
Comment 3
2017-06-12 14:38:27 PDT
Comment on
attachment 312698
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=312698&action=review
> Source/WebKit2/WebProcess/WebPage/mac/RemoteLayerTreeDrawingArea.h:54 > + uint64_t lastCommittedTransactionID() const { return m_currentTransactionID; }
Is this name right? Isn't it also the current transaction ID while building? When is it incremented?
Simon Fraser (smfr)
Comment 4
2017-06-12 15:56:57 PDT
https://trac.webkit.org/r218149
Megan Gardner
Comment 5
2017-10-02 18:10:55 PDT
***
Bug 172792
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug